more notification work
